--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <title>Matthew Qu</title>
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel ="stylesheet">
@@ -10,7 +11,7 @@
     <script src="https://kit.fontawesome.com/9d3bfa90da.js" crossorigin="anonymous"></script>
 </head>
 <body>
-        <div>
+        <div class="left">
             <img id="profile-img" src="img/owl.jpg">
         </div>
         <div>
@@ -29,6 +30,8 @@
             <div>
                 <p class="end">
                     Don't forget to check me out on:
+                </p>
+                <br>
                 <div class="icon">
                     <a href="https://www.youtube.com/channel/UCubSXSaG_Geo0obUFzELQ1w?sub_confirmation=1." target="_blank">
                         <i class="fab fa-youtube"></i>
@@ -42,8 +45,8 @@
                 <div class="icon">
                     <a href="https://www.facebook.com/matthew.qu.735" target="_blank">
                         <i class="fab fa-facebook"></i>
+                    </a>
                 </div>
-                </p>
             </div>
 
         </div>
